--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   velocity_x: ^4.1.0
   get: ^4.6.5
   flutter_launcher_icons: ^0.13.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
